--- a/packages/toolboxes/solana/package.json
+++ b/packages/toolboxes/solana/package.json
@@ -2,7 +2,8 @@
   "author": "swapkit-oss",
   "dependencies": {
     "@scure/bip39": "1.3.0",
-    "@solana/spl-token": "0.4.8",
+    "@solana/spl-memo": "0.2.5",
+    "@solana/spl-token": "0.4.9",
     "@solana/spl-token-registry": "0.2.4574",
     "@solana/web3.js": "1.95.3",
     "@swapkit/helpers": "workspace:*"
