chore: updates solana deps (#1075)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/packages/toolboxes/solana/package.json
+++ b/packages/toolboxes/solana/package.json
@@ -6,7 +6,8 @@
     "@solana/spl-token": "0.4.9",
     "@solana/spl-token-registry": "0.2.4574",
     "@solana/web3.js": "1.95.3",
-    "@swapkit/helpers": "workspace:*"
+    "@swapkit/helpers": "workspace:*",
+    "micro-key-producer": "0.7.1"
   },
   "description": "SwapKit - Toolbox solana",
   "files": [
