Feat/kado plugin (#1107)
* wip: kado plugin

* fix: Correct function name and update parameters in offRampQuote

* fix: update the on and off ramp quote functions in the Kado plugin

The commit message is:

fix: update the on and off ramp quote functions in the Kado plugin

* fix: update Kado plugin to use new API endpoints

* feat: add KadoQuoteResponse type

* feat: Update onRampQuote and offRampQuote functions in Kado plugin

* feat: Extend KadoQuoteRequest type with additional fiat methods and currencies

* feat: add getOrderStatus with GET

* feat: adds kado quoting

* feat: adds kado tokenlist

* feat: WIP kado plugin updates

* feat: fix kado quote mapping

* feat: kado plugin

* chore: fix lint issues

* chore: remove aider files

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/playgrounds/nextjs/package.json
+++ b/playgrounds/nextjs/package.json
@@ -35,6 +35,7 @@
     "@swapkit/core": "workspace:*",
     "@swapkit/plugin-chainflip": "workspace:*",
     "@swapkit/plugin-evm": "workspace:*",
+    "@swapkit/plugin-kado": "workspace:*",
     "@swapkit/plugin-thorchain": "workspace:*",
     "@swapkit/tokens": "workspace:*",
     "@swapkit/wallets": "workspace:*",
