--- a/packages/plugins/kado/package.json
+++ b/packages/plugins/kado/package.json
@@ -2,16 +2,9 @@
   "author": "swapkit-oss",
   "dependencies": {
     "@swapkit/api": "workspace:*",
-    "@swapkit/core": "workspace:*",
-    "@swapkit/plugin-chainflip": "workspace:*",
-    "@swapkit/plugin-evm": "workspace:*",
-    "@swapkit/plugin-kado": "workspace:*",
-    "@swapkit/plugin-radix": "workspace:*",
-    "@swapkit/plugin-thorchain": "workspace:*",
-    "@swapkit/tokens": "workspace:*",
-    "@swapkit/wallets": "workspace:*"
+    "@swapkit/helpers": "workspace:*"
   },
-  "description": "SwapKit - SDK",
+  "description": "SwapKit Plugin - Kado",
   "files": [
     "src/",
     "dist/"
@@ -19,7 +12,8 @@
   "homepage": "https://github.com/thorswap/SwapKit",
   "license": "Apache-2.0",
   "main": "./dist/index.js",
-  "name": "@swapkit/sdk",
+  "name": "@swapkit/plugin-kado",
+  "react-native": "./src/index.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/thorswap/SwapKit.git"
@@ -27,10 +21,12 @@
   "scripts": {
     "build": "bun run ./build.ts",
     "clean": "rm -rf dist node_modules *.tsbuildinfo",
-    "lint": "biome check --diagnostic-level=error --write ./src",
+    "lint": "biome check --write ./src",
+    "test": "echo 'bun test'",
+    "test:coverage": "bun test --coverage",
     "type-check": "tsc --noEmit"
   },
   "type": "module",
   "types": "./src/index.ts",
-  "version": "2.0.12"
+  "version": "0.0.0"
 }
