chore: rename xdefi wallet (#1114)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/packages/swapkit/wallets/package.json
+++ b/packages/swapkit/wallets/package.json
@@ -2,6 +2,7 @@
   "description": "SwapKit - Wallets",
   "dependencies": {
     "@swapkit/wallet-coinbase": "workspace:*",
+    "@swapkit/wallet-ctrl": "workspace:*",
     "@swapkit/wallet-evm-extensions": "workspace:*",
     "@swapkit/wallet-exodus": "workspace:*",
     "@swapkit/wallet-keepkey": "workspace:*",
@@ -15,8 +16,7 @@
     "@swapkit/wallet-radix": "workspace:*",
     "@swapkit/wallet-talisman": "workspace:*",
     "@swapkit/wallet-trezor": "workspace:*",
-    "@swapkit/wallet-wc": "workspace:*",
-    "@swapkit/wallet-xdefi": "workspace:*"
+    "@swapkit/wallet-wc": "workspace:*"
   },
   "files": [
     "src/",
