Feat/bitget wallet (#1109)
* Bitget wallet

* bitget fixes

* Changeset

* remove redundant code

* Revert "Changeset"

This reverts commit 2ac894ef8c52537dbd4aa2d0a6777ad7c8f37ec4.

* Type fixes

* Fix types

* feat: cleans code and fixes typing

---------

Co-authored-by: Marek Epicode <m.sadura@outlook.com>
Co-authored-by: towan <95243956+towanTG@users.noreply.github.com>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/packages/swapkit/wallets/package.json
+++ b/packages/swapkit/wallets/package.json
@@ -1,6 +1,7 @@
 {
   "description": "SwapKit - Wallets",
   "dependencies": {
+    "@swapkit/wallet-bitget": "workspace:*",
     "@swapkit/wallet-coinbase": "workspace:*",
     "@swapkit/wallet-ctrl": "workspace:*",
     "@swapkit/wallet-evm-extensions": "workspace:*",
